# compressor-benchmarking

./: Benchmark.cpp  CMakeLists.txt  Main.cpp  README.md  Wrappers.hpp
include/: Benchmark.hpp  Main.hpp  Wrappers.hpp
src/: Main.cpp
test/: CMakeLists.txt  testAll.cpp
